# iDopt

./: .env.template  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: django-ci.yaml
src/: dev-requirements.txt  manage.py  pyproject.toml
src/idopt/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
src/idopt/tests/: test_sanity.py
src/posts/: models.py  pagination.py
src/posts/api/: serializers.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py  0002_comment.py  0003_post_comment_of_delete_comment.py  0004_alter_post_comment_of.py
src/posts/tests/: test_comment.py  test_create_post.py  test_list_comments.py  test_retrieve_delete_post.py
src/profiles/: admin.py  models.py
src/profiles/api/: serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_device.py  0003_device_token.py
src/profiles/tests/: test_login.py  test_registration.py  test_verify_email.py
